221/ Added new entrance structure into the world generation.
222/ Updated Cursed Kingdom entrance structure.
223/ Decreases maximum health of Lootbox Lord from 54k to 35k.
224/ Added boss health bar.
225/ Fixed a bug where DR did not apply.
226/ Added Practice mode.
227/ Reworked perk UI and perk reroll mechanic.
228/ Added Main debug UI for easier time to manage debug item.
229/ Deleted 3 of the system debug item as it is no longer needed.
230/ Deleted BiomeToggle as it is no longer needed.
231/ Moved SpriteTracker into Utils and turn it into a class instead of struct.
232/ Added perk reroll icon.
233/ Added artifact debug UI.
234/ Added perk debug UI.
235/ Added Main debug stick ( which can be accessed via debug player condition ).
236/ Disable Drawback debuff activation condition.
237/ Added custom boss fight music for Loot box Lord.
238/ Nerf flamelash projectile damage shot from Phoenix Blaster from 1.5x to .34x and reduce the amount of flamelash projectile created from charged up and reduce their penetrate value.
239/ Fixed a prefix effect disappearing after exit and entering the world.
240/ Make it so that healing effectiveness also apply to potion.
241/ Nerf Lootbox Lord desperation attack.
242/ Nerf Lootbox Lord bullet hell attack.
243/ Added in a secert.
244/ Nerf Self Explosion regeneration 22 -> 15.
245/ Fixed Ashwood boot effect still active after being taken off.
246/ Added 2 new damage stats.
247/ Ram usages optimization, reduce heavy load on RAM by making use more of CPU power when opening up a Lootbox.
248/ Changed how item loot pool worked.
249/ Deleted Refined axe, hunter instinct perk.
250/ Merged TomahawkUpgrade with Axe overhaul.
251/ Slightly buffed Axe size to be more viable.
252/ Reworked Chik yoyo.
253/ Added 3 new sprites for skill.
254/ Added 4 new sprite for scroll.
255/ This usually is not mention due to how insignificant it is but updated build number from 0.0.13 -> 0.0.14.