@@ -1,18 +1,0 @@
-﻿using Terraria;
-using Terraria.ModLoader;
-using Roguelike.Texture;
-using Roguelike.Common.Global;
-using Roguelike.Common.Utils;
-
-namespace Roguelike.Contents.BuffAndDebuff.PlayerDebuff
-{
-	class LifeLoss : ModBuff {
-		public override string Texture => ModTexture.EMPTYBUFF;
-		public override void SetStaticDefaults() {
-			this.BossRushSetDefaultDeBuff();
-		}
-		public override void Update(Player player, ref int buffIndex) {
-			PlayerStatsHandle.AddStatsToPlayer(player, PlayerStats.MaxHP, .5f);
-		}
-	}
-}
